--- a/src/styles.css
+++ b/src/styles.css
@@ -98,25 +98,25 @@
     #RESET
   \*-----------------------------------*/
   
-  /* *, *::before, *::after {
+  *, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  } */
+  }
   
-  /* a { text-decoration: none; } */
+  a { text-decoration: none; }
   
-  /* li { list-style: none; } */
+  li { list-style: none; }
   
-  /* img, mat-icon, a, button, time, span { display: block; } */
+  img, mat-icon, a, button, time, span { display: block; }
   
-  /* button {
+  button {
     font: inherit;
     background: none;
     border: none;
     text-align: left;
     cursor: pointer;
-  } */
+  }
   
   /* input, textarea {
     display: block;
