Cambio a la version 18, se agrega paginación, se mejora el approach, se inicia a trabajar en el about

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,88 +1,1 @@
-<main>
-  <aside class="sidebar" data-sidebar>
-    <div class="sidebar-info">
-      <figure class="avatar-box">
-        <img
-          src="./assets/images/Imagen-Avatar.png"
-          alt="Juan Fernando Tamayo Zapata"
-          width="80"
-        />
-      </figure>
-
-      <div class="info-content">
-        <h1 class="name" title="Juan Fernando Tamayo Zapata">
-          Juan Fernando Tamayo Zapata
-        </h1>
-        <p class="title">Full Stack Developer</p>
-      </div>
-
-      <button class="info_more-btn" data-sidebar-btn>
-        <span>Show Contacts</span>
-        <mat-icon>keyboard_arrow_down</mat-icon>
-      </button>
-    </div>
-
-    <div class="sidebar-info_more">
-      <div class="separator"></div>
-      <ul class="contacts-list">
-        <li class="contact-item">
-          <div class="icon-box">
-            <mat-icon>mail</mat-icon>
-          </div>
-          <div class="contact-info">
-            <p class="contact-title">Email</p>
-            <a
-              href="mailto:tamayozapatajuanfernando@gmail.com"
-              class="contact-link"
-              >{{ email }}</a
-            >
-          </div>
-        </li>
-        <li class="contact-item">
-          <div class="icon-box">
-            <mat-icon>location_on</mat-icon>
-          </div>
-          <div class="contact-info">
-            <p class="contact-title">Location</p>
-            <address>Medellín, Colombia</address>
-          </div>
-        </li>
-      </ul>
-      <div class="separator"></div>
-      <ul class="social-list">
-        <li class="social-item">
-          <a href="#" class="social-link">
-            <mat-icon svgIcon="linkedin"></mat-icon>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="#" class="social-link">
-            <mat-icon svgIcon="github"></mat-icon>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </aside>
-  <div class="main-content">
-    <nav class="navbar">
-      <ul class="navbar-list">
-        <li class="navbar-item">
-          <button class="navbar-link active" data-nav-link>About</button>
-        </li>
-        <li class="navbar-item">
-          <button class="navbar-link" data-nav-link>Resume</button>
-        </li>
-        <li class="navbar-item">
-          <button class="navbar-link" data-nav-link>Portafolio</button>
-        </li>
-        <li class="navbar-item">
-          <button class="navbar-link" data-nav-link>Contact</button>
-        </li>
-      </ul>
-    </nav>
-    <article class="about active" data-page="about">About</article>
-    <article class="resume" data-page="resume">Resume</article>
-    <article class="portafolio" data-page="portafolio">Portafolio</article>
-    <article class="contact" data-page="contact">Contact</article>
-  </div>
-</main>
+<router-outlet></router-outlet>
