--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,27 +9,28 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$cv-juan-fernando-primary: mat.define-palette(mat.$indigo-palette);
-$cv-juan-fernando-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$cv-juan-fernando-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$cv-juan-fernando-theme: mat.define-light-theme((
+// Define the theme object.
+$cv-juan-fernando-theme: mat.define-theme((
   color: (
-    primary: $cv-juan-fernando-primary,
-    accent: $cv-juan-fernando-accent,
-    warn: $cv-juan-fernando-warn,
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($cv-juan-fernando-theme);
+:root {
+  @include mat.all-component-themes($cv-juan-fernando-theme);
+}
 
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($cv-juan-fernando-theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($cv-juan-fernando-theme);
