Inicio de implementación de multi-idioma

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,12 @@
 <article class="about active" data-page="about">
 
     <header>
-      <h2 class="h2 article-title">About me</h2>
+      <h2 class="h2 article-title">{{ 'about.title' | translate }}</h2>
     </header>
 
     <section class="about-text">
       <p>
-        Here is a brief description of myself.
+        {{ 'about.description' | translate }}
       </p>
     </section>
 
