--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,7 +3,7 @@
       <div class="sidebar-info">
         <figure class="avatar-box">
           <img
-            src="./assets/images/Perfil.png"
+            src="assets/images/Perfil.png"
             alt="Juan Fernando Tamayo Zapata"
             width="80"
           />
