--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,82 +1,55 @@
-<article class="about active" data-page="about">
-
+<article data-page="about">
     <header>
-      <h2 class="h2 article-title">{{ 'about.title' | translate }}</h2>
+      <h2>{{ 'about.title' | translate }}</h2>
     </header>
-
     <section class="about-text">
       <p>
         {{ 'about.description' | translate }}
       </p>
     </section>
-
-
     <!--
       - service
     -->
-
-    <section class="service">
-
-      <h3 class="h3 service-title">What i'm doing</h3>
-
-      <ul class="service-list">
-        <li class="service-item">
-
-          <div class="service-icon-box">
+    <section>
+      <h3>What i'm doing</h3>
+      <ul>
+        <li>
+          <div >
             <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
           </div>
-
-          <div class="service-content-box">
-            <h4 class="h4 service-item-title">Web development</h4>
-
-            <p class="service-item-text">
+          <div>
+            <h4>Web development</h4>
+            <p>
               High-quality development of sites at the professional level.
             </p>
           </div>
-
         </li>
-
-        <li class="service-item">
-
-          <div class="service-icon-box">
+        <li>
+          <div>
             <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
           </div>
-
-          <div class="service-content-box">
-            <h4 class="h4 service-item-title">Mobile apps</h4>
-
-            <p class="service-item-text">
+          <div>
+            <h4>Mobile apps</h4>
+            <p>
               Professional development of applications for iOS and Android.
             </p>
           </div>
-
         </li>
-
       </ul>
-
     </section>
-
-
     <!--
       - testimonials
     -->
-
-    <section class="testimonials">
-
-      <h3 class="h3 testimonials-title">Testimonials</h3>
-
-      <ul class="testimonials-list has-scrollbar">
-
-        <li class="testimonials-item">
-          <div class="content-card" data-testimonials-item>
-
+    <section>
+      <h3>Testimonials</h3>
+      <ul>
+        <li>
+          <div>
             <!-- <figure class="testimonials-avatar-box">
               <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
             </figure> -->
-
-            <h4 class="h4 testimonials-item-title" data-testimonials-title>Chorro 1</h4>
-
-            <div class="testimonials-text" data-testimonials-text>
+            <h4>Chorro 1</h4>
+            <div>
               <p>
                 Chope was hired to create a corporate identity. We were very pleased with the work done. She has a
                 lot of experience
@@ -85,20 +58,15 @@
                 elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
               </p>
             </div>
-
           </div>
         </li>
-
-        <li class="testimonials-item">
-          <div class="content-card" data-testimonials-item>
-
+        <li>
+          <div>
             <!-- <figure class="testimonials-avatar-box">
               <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
             </figure> -->
-
-            <h4 class="h4 testimonials-item-title" data-testimonials-title>Chorro 2</h4>
-
-            <div class="testimonials-text" data-testimonials-text>
+            <h4 >Chorro 2</h4>
+            <div>
               <p>
                 Chope was hired to create a corporate identity. We were very pleased with the work done. She has a
                 lot of experience
@@ -107,20 +75,15 @@
                 elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
               </p>
             </div>
-
           </div>
         </li>
-
-        <li class="testimonials-item">
-          <div class="content-card" data-testimonials-item>
-
+        <li>
+          <div>
             <!-- <figure class="testimonials-avatar-box">
               <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
             </figure> -->
-
-            <h4 class="h4 testimonials-item-title" data-testimonials-title>Chorro 3</h4>
-
-            <div class="testimonials-text" data-testimonials-text>
+            <h4 >Chorro 3</h4>
+            <div >
               <p>
                 Chope was hired to create a corporate identity. We were very pleased with the work done. She has a
                 lot of experience
@@ -129,20 +92,15 @@
                 elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
               </p>
             </div>
-
           </div>
         </li>
-
-        <li class="testimonials-item">
-          <div class="content-card" data-testimonials-item>
-
+        <li >
+          <div>
             <!-- <figure class="testimonials-avatar-box">
               <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
             </figure> -->
-
-            <h4 class="h4 testimonials-item-title" data-testimonials-title>Chorro 4</h4>
-
-            <div class="testimonials-text" data-testimonials-text>
+            <h4 >Chorro 4</h4>
+            <div>
               <p>
                 Chope was hired to create a corporate identity. We were very pleased with the work done. She has a
                 lot of experience
@@ -151,43 +109,25 @@
                 elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
               </p>
             </div>
-
           </div>
         </li>
-
       </ul>
-
     </section>
-
-
     <!--
       - testimonials modal
     -->
-
-    <div class="modal-container" data-modal-container>
-
-      <div class="overlay" data-overlay></div>
-
-      <section class="testimonials-modal">
-
-        <button class="modal-close-btn" data-modal-close-btn>
-            
-        </button>
-
-        <div class="modal-img-wrapper">
+    <div>
+      <section>
+        <div>
           <!-- <figure class="modal-avatar-box">
             <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
           </figure> -->
 
           <!-- <img src="./assets/images/icon-quote.svg" alt="quote icon"> -->
         </div>
-
-        <div class="modal-content">
-
-          <h4 class="h3 modal-title" data-modal-title>Daniel lewis</h4>
-
+        <div>
+          <h4 >Daniel lewis</h4>
           <time datetime="2021-06-14">14 June, 2021</time>
-
           <div data-modal-text>
             <p>
               Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
@@ -197,62 +137,7 @@
               elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
             </p>
           </div>
-
         </div>
-
       </section>
-
     </div>
-
-
-    <!--
-      - clients
-    -->
-
-    <section class="clients">
-
-      <h3 class="h3 clients-title">Clients</h3>
-
-      <ul class="clients-list has-scrollbar">
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-1-color.png" alt="client logo">
-          </a>
-        </li>
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-2-color.png" alt="client logo">
-          </a>
-        </li>
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-3-color.png" alt="client logo">
-          </a>
-        </li>
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-4-color.png" alt="client logo">
-          </a>
-        </li>
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-5-color.png" alt="client logo">
-          </a>
-        </li>
-
-        <li class="clients-item">
-          <a href="#">
-            <img src="./assets/images/logo-6-color.png" alt="client logo">
-          </a>
-        </li>
-
-      </ul>
-
-    </section>
-
   </article>
